[package]
name = "game_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiplayer_client = { path = "../../multiplayer_lib/multiplayer_client" }
game_shared = { path = "../game_shared" }
bevy = "0.8"
bevy_renet = "0.0.5"
bevy_egui = "0.15.1"
